force-app/main/default/objects/Account/fields/Accord_Civic__c.field-meta.xml
<CustomField>
    <fullName>Accord_Civic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord-Civic</label>
    <type>Checkbox</type>
</CustomField>