force-app/main/default/objects/Account/fields/Actividad_economica__c.field-meta.xml
<CustomField>
    <fullName>Actividad_economica__c</fullName>
    <label>Actividad económica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativa</fullName>
            </value>
            <value>
                <fullName>Agricultura/Ganaderia</fullName>
            </value>
            <value>
                <fullName>Alimentos y bebidas</fullName>
            </value>
            <value>
                <fullName>Comercializadora</fullName>
            </value>
            <value>
                <fullName>Construccion</fullName>
            </value>
            <value>
                <fullName>Consultoria y Asesoria Empresarial</fullName>
            </value>
            <value>
                <fullName>Deportista</fullName>
            </value>
            <value>
                <fullName>Educacion</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Financiera</fullName>
            </value>
            <value>
                <fullName>Hotelería y Turísmo</fullName>
            </value>
            <value>
                <fullName>Ingenieria</fullName>
            </value>
            <value>
                <fullName>Jubilado/Pensionado</fullName>
            </value>
            <value>
                <fullName>Juridica</fullName>
            </value>
            <value>
                <fullName>Mantenimiento/Reparacion</fullName>
            </value>
            <value>
                <fullName>Mercadeo</fullName>
            </value>
            <value>
                <fullName>Otros servicios (peluquerias lavanderia etc)</fullName>
            </value>
            <value>
                <fullName>Producción/Fabrica</fullName>
            </value>
            <value>
                <fullName>Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Seguridad</fullName>
            </value>
            <value>
                <fullName>Servicios generales (aseo vigilancia mensajeria)</fullName>
            </value>
            <value>
                <fullName>Sistemas</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Textil</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Ama de Casa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>