force-app/main/default/objects/Account/fields/Actualizar_Concesionario__c.field-meta.xml
<CustomField>
    <fullName>Actualizar_Concesionario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ocupado para que al marcarse se envíe a sap a actualizar la cuenta.</description>
    <label>Actualizar Concesionario</label>
    <type>Checkbox</type>
</CustomField>