force-app/main/default/objects/Account/fields/AM_Barrio__c.field-meta.xml
<CustomField>
    <fullName>AM_Barrio__c</fullName>
    <label>Barrio</label>
    <length>120</length>
    <type>Text</type>
</CustomField>