force-app/main/default/objects/Account/fields/AM_BIS2__c.field-meta.xml
<CustomField>
    <fullName>AM_BIS2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado en la concatenación de la dirección. Se chequea en caso de que la dirección lleve el indicador BIS en la vía secundaria.</description>
    <label>BIS</label>
    <type>Checkbox</type>
</CustomField>