force-app/main/default/objects/Account/fields/AM_BIS__c.field-meta.xml
<CustomField>
    <fullName>AM_BIS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección. Se chequea en caso de que la dirección lleve el indicador BIS.</description>
    <label>BIS</label>
    <type>Checkbox</type>
</CustomField>