force-app/main/default/objects/Account/fields/AM_Cargo_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Cargo_representante__c</fullName>
    <label>Cargo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>