force-app/main/default/objects/Account/fields/AM_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Req. ID AM-006. Nombre de municipio.</description>
    <label>Ciudad</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>