force-app/main/default/objects/Account/fields/AM_Ciudad_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad_representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad de representante</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Cuentas (Ciudad)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>