force-app/main/default/objects/Account/fields/AM_Como_se_entero_de_la_marca__c.field-meta.xml
<CustomField>
    <fullName>AM_Como_se_entero_de_la_marca__c</fullName>
    <label>¿Cómo se enteró de la marca?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activación de Marca</fullName>
            </value>
            <value>
                <fullName>Página web</fullName>
            </value>
            <value>
                <fullName>Prensa</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Recomendado</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Televisión</fullName>
            </value>
            <value>
                <fullName>Aviso Paraderos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>