force-app/main/default/objects/Account/fields/AM_Complemento__c.field-meta.xml
<CustomField>
    <fullName>AM_Complemento__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección. Aquí se expresan los datos que complementen la dirección exacta. EJ: URB. BOSQUES DE ALEJANDRÍA APT 308.</description>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>