force-app/main/default/objects/Account/fields/AM_ContactoRelacionadoAC__c.field-meta.xml
<CustomField>
    <fullName>AM_ContactoRelacionadoAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Relacionado</label>
    <referenceTo>MC_Contactos__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>