force-app/main/default/objects/Account/fields/AM_Correo_electronico_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Correo_electronico_representante__c</fullName>
    <label>Correo electronico</label>
    <type>Email</type>
</CustomField>