force-app/main/default/objects/Account/fields/AM_Correo_Electronico_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>AM_Correo_Electronico_Trabajo__c</fullName>
    <label>Correo Electronico Trabajo</label>
    <type>Email</type>
</CustomField>