force-app/main/default/objects/Account/fields/AM_Cual_Actividad_Tiempo_Libre__c.field-meta.xml
<CustomField>
    <fullName>AM_Cual_Actividad_Tiempo_Libre__c</fullName>
    <inlineHelpText>Si selecciono &quot;Otro&quot; en actividad de tiempo libre, diligencie cual.</inlineHelpText>
    <label>¿Cuál?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>