force-app/main/default/objects/Account/fields/AM_CUE_DIA_MES_CUMPLEANOS__c.field-meta.xml
<CustomField>
    <fullName>AM_CUE_DIA_MES_CUMPLEANOS__c</fullName>
    <formula>IF(MONTH( PersonBirthdate ) &gt; MONTH(TODAY()),DATE(YEAR(TODAY()),MONTH(PersonBirthdate),DAY(PersonBirthdate)),
IF(MONTH(PersonBirthdate) &lt; MONTH(TODAY()),DATE(YEAR(TODAY())+1,MONTH(PersonBirthdate),DAY(PersonBirthdate)),
IF(DAY(PersonBirthdate) &gt;= (DAY(TODAY())),DATE(YEAR(TODAY()),MONTH(PersonBirthdate),DAY(PersonBirthdate)),
DATE(YEAR(TODAY())+1,MONTH(PersonBirthdate),DAY(PersonBirthdate)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proximo Cumpleaños</label>
    <type>Date</type>
</CustomField>