force-app/main/default/objects/Account/fields/AM_Deporte_que_practica__c.field-meta.xml
<CustomField>
    <fullName>AM_Deporte_que_practica__c</fullName>
    <label>Deporte que practica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenis</fullName>
            </value>
            <value>
                <fullName>Ciclismo</fullName>
            </value>
            <value>
                <fullName>Fútbol</fullName>
            </value>
            <value>
                <fullName>Spinning</fullName>
            </value>
            <value>
                <fullName>Gimnasio</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Motocicletas</fullName>
            </value>
            <value>
                <fullName>Yoga/Pilates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>