force-app/main/default/objects/Account/fields/AM_Direccion_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Direccion_representante__c</fullName>
    <label>Direccion</label>
    <length>200</length>
    <type>Text</type>
</CustomField>