force-app/main/default/objects/Account/fields/AM_Edad__c.field-meta.xml
<CustomField>
    <fullName>AM_Edad__c</fullName>
    <formula>FLOOR((TODAY() -   PersonBirthdate   )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FLOOR((TODAY() -  PersonBirthdate__c  )/365.2425)</inlineHelpText>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>