force-app/main/default/objects/Account/fields/AM_Empresa_donde_labora__c.field-meta.xml
<CustomField>
    <fullName>AM_Empresa_donde_labora__c</fullName>
    <label>Empresa donde labora</label>
    <length>100</length>
    <type>Text</type>
</CustomField>