force-app/main/default/objects/Account/fields/AM_Estado__c.field-meta.xml
<CustomField>
    <fullName>AM_Estado__c</fullName>
    <defaultValue>&quot;Activo&quot;</defaultValue>
    <description>Esta de la cuenta del cliente</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>