force-app/main/default/objects/Account/fields/AM_Fecha_Ultimo_Contacto_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_Ultimo_Contacto_Cliente__c</fullName>
    <label>Fecha Ultimo Contacto Cliente</label>
    <type>Date</type>
</CustomField>