force-app/main/default/objects/Account/fields/AM_ID_cuadra__c.field-meta.xml
<CustomField>
    <fullName>AM_ID_cuadra__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección. Identifica el lugar exacto en que se encuentra una edificación, después de localizar tanto la via principal como la secundaria</description>
    <label>ID cuadra</label>
    <length>9</length>
    <type>Text</type>
</CustomField>