force-app/main/default/objects/Account/fields/AM_Literal_via_principal__c.field-meta.xml
<CustomField>
    <fullName>AM_Literal_via_principal__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección. Recibe una o dos letras que identifican la ubicación de la vía principal. Va desde la A hasta la ZZ.</description>
    <label>Literal vía principal</label>
    <length>3</length>
    <type>Text</type>
</CustomField>