force-app/main/default/objects/Account/fields/AM_Nivel_de_estudio__c.field-meta.xml
<CustomField>
    <fullName>AM_Nivel_de_estudio__c</fullName>
    <label>Ultimo año de estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primaria</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Tecnológico-Técnico</fullName>
            </value>
            <value>
                <fullName>Universitario</fullName>
            </value>
            <value>
                <fullName>Postgrado</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>