force-app/main/default/objects/Account/fields/AM_No_recibir_correos_elect_contacto__c.field-meta.xml
<CustomField>
    <fullName>AM_No_recibir_correos_elect_contacto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir correos electrónicos contacto</label>
    <type>Checkbox</type>
</CustomField>