force-app/main/default/objects/Account/fields/AM_Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_documento__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Favor no incluir dígito de verificación.</inlineHelpText>
    <label>Número de documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>