force-app/main/default/objects/Account/fields/AM_Numero_de_documento_conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_documento_conyuge__c</fullName>
    <externalId>true</externalId>
    <label>Número de documento conyuge</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>