force-app/main/default/objects/Account/fields/AM_Numero_de_documento_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_documento_representante__c</fullName>
    <label>Numero de documento.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>