force-app/main/default/objects/Account/fields/AM_Numero_via_principal__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_via_principal__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección. Recibe un número que identifica la ubicación de la vía principal</description>
    <label>Número via principal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>