force-app/main/default/objects/Account/fields/AM_Ocupacion_pc__c.field-meta.xml
<CustomField>
    <fullName>AM_Ocupacion_pc__c</fullName>
    <label>Ocupacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Miembro de fuerzas armadas</fullName>
            </value>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Jubilado/Pensionado</fullName>
            </value>
            <value>
                <fullName>Estudiante</fullName>
            </value>
            <value>
                <fullName>Dueño de empresa</fullName>
            </value>
            <value>
                <fullName>Ama de casa</fullName>
            </value>
            <value>
                <fullName>Rentista de capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>