force-app/main/default/objects/Account/fields/AM_Orientacion_via_principal__c.field-meta.xml
<CustomField>
    <fullName>AM_Orientacion_via_principal__c</fullName>
    <description>Req. ID AM-006. Campo utilizado en la concatenación de la dirección.</description>
    <label>Orientación via principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Este</fullName>
            </value>
            <value>
                <fullName>Oeste</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>