force-app/main/default/objects/Account/fields/AM_Primer_apellido_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Primer_apellido_representante__c</fullName>
    <label>Primer apellido</label>
    <length>200</length>
    <type>Text</type>
</CustomField>