force-app/main/default/objects/Account/fields/AM_Primer_nombre_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Primer_nombre_representante__c</fullName>
    <label>Primer nombre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>