force-app/main/default/objects/Account/fields/AM_Rango_de_edad__c.field-meta.xml
<CustomField>
    <fullName>AM_Rango_de_edad__c</fullName>
    <label>Rango de edad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menor 31 años</fullName>
            </value>
            <value>
                <fullName>Entre 31 y 40</fullName>
            </value>
            <value>
                <fullName>Entre 41 y 50</fullName>
            </value>
            <value>
                <fullName>Entre 51 y 60</fullName>
            </value>
            <value>
                <fullName>Mayor de 60</fullName>
            </value>
            <value>
                <fullName>Sin fecha nacimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>