force-app/main/default/objects/Account/fields/AM_Segundo_apellido_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Segundo_apellido_representante__c</fullName>
    <label>Segundo apellido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>