force-app/main/default/objects/Account/fields/AM_Telefono_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Telefono_representante__c</fullName>
    <label>Teléfono móvil</label>
    <type>Phone</type>
</CustomField>