force-app/main/default/objects/Account/fields/AM_Tipo_de_cliente_Inicial__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_cliente_Inicial__c</fullName>
    <label>Tipo de cliente Inicial</label>
    <length>23</length>
    <type>Text</type>
</CustomField>