force-app/main/default/objects/Account/fields/AM_Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cédula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cédula de extranjería</fullName>
            </value>
            <value>
                <fullName>Código de NIT de extranjería</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>NUIP</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Sociedad extranjera sin NIT</fullName>
            </value>
            <value>
                <fullName>Tarjeta de identidad</fullName>
            </value>
            <value>
                <fullName>Tarjeta extranjeria</fullName>
                <label>Tarjeta de extranjeria</label>
            </value>
            <value>
                <fullName>Certificado para sucesiones</fullName>
            </value>
            <value>
                <fullName>Tipo de Dcto sucesión ilíquida</fullName>
            </value>
            <value>
                <fullName>Sin identificación del exterior</fullName>
            </value>
            <value>
                <fullName>Dcto Ident Extranjero</fullName>
            </value>
            <value>
                <fullName>Identificación de Extranjeros</fullName>
            </value>
            <value>
                <fullName>Tipo de documento extranjero</fullName>
            </value>
            <value>
                <fullName>Carné Diplomático</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>