force-app/main/default/objects/Account/fields/AM_Tipo_de_documento_conyuge__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_documento_conyuge__c</fullName>
    <label>Tipo de documento conyuge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cédula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cédula de extranjería</fullName>
            </value>
            <value>
                <fullName>Código de NIT de extranjería</fullName>
            </value>
            <value>
                <fullName>NIT</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Sociedad extranjera sin NIT</fullName>
            </value>
            <value>
                <fullName>Tarjeta de identidad</fullName>
            </value>
            <value>
                <fullName>Tarjeta de seguro extranjero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>