force-app/main/default/objects/Account/fields/AM_Tipo_de_documento_representante__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_documento_representante__c</fullName>
    <label>Tipo de documento.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nit</fullName>
            </value>
            <value>
                <fullName>Cédula de ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cédula de extranjería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>