force-app/main/default/objects/Account/fields/AM_Tipo_de_usuario__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_usuario__c</fullName>
    <defaultValue>&quot;Cliente No Honda&quot;</defaultValue>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Honda</fullName>
            </value>
            <value>
                <fullName>Cliente No Honda</fullName>
                <default>true</default>
                <label>Cliente No Honda</label>
            </value>
            <value>
                <fullName>Cliente nuevo</fullName>
                <isActive>false</isActive>
                <label>Cliente nuevo</label>
            </value>
            <value>
                <fullName>Otra marca</fullName>
                <isActive>false</isActive>
                <label>Otra marca</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>