force-app/main/default/objects/Account/fields/AM_Ultima_cotizacion_etapa__c.field-meta.xml
<CustomField>
    <fullName>AM_Ultima_cotizacion_etapa__c</fullName>
    <label>Ultima cotizacion etapa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>