force-app/main/default/objects/Account/fields/AM_Ultimo_comentario_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Ultimo_comentario_cotizacion__c</fullName>
    <label>Ultimo comentario cotizacion</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>